<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:layout_marginTop="@dimen/vertical_margin"
            android:layout_marginEnd="@dimen/horizontal_margin">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_shoe_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/shoe_detail_name_hint"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:layout_marginTop="@dimen/vertical_margin"
            android:layout_marginEnd="@dimen/horizontal_margin">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_company"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/shoe_detail_company_hint"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:layout_marginTop="@dimen/vertical_margin"
            android:layout_marginEnd="@dimen/horizontal_margin">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_shoe_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/shoe_detail_size_hint"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:layout_marginTop="@dimen/vertical_margin"
            android:layout_marginEnd="@dimen/horizontal_margin">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_shoe_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/shoe_detail_description_hint"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/button_cancel"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/button_cancel"/>
            <Button
                android:id="@+id/button_save"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/button_save"/>
        </LinearLayout>
    </LinearLayout>
</layout>